// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Edit/> conditional render of edit vs. save works properly 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="row"
    >
      <p>
        nice typeface
      </p>
      <Button
        data-test="test1"
        onClick={[Function]}
        text="EDIT"
      />
    </div>
    <div
      className="row"
    >
      <Button
        data-test="test3"
        onClick={[Function]}
        text="DELETE"
      />
    </div>
  </div>
</div>
`;

exports[`<Edit/> conditional render of edit vs. save works properly 2`] = `
<div>
  <div
    className="row"
  >
    <div
      className="row"
    >
      <Input
        name="notes"
        onChange={[Function]}
        placeholder="Add some notes"
        purpose="editForm"
        type="text"
        value="nice typeface"
      />
      <Button
        data-test="test2"
        onClick={[Function]}
        text="SAVE"
      />
    </div>
    <div
      className="row"
    >
      <Button
        data-test="test3"
        onClick={[Function]}
        text="DELETE"
      />
    </div>
  </div>
</div>
`;

exports[`<Edit/> conditional render of editing form vs. redirect works properly 1`] = `
<div>
  <Redirect
    push={false}
    to="/mine"
  />
</div>
`;

exports[`<Edit/> conditional render of editing form vs. redirect works properly 2`] = `
<div>
  <div
    className="row"
  >
    <div
      className="row"
    >
      <p>
        nice typeface
      </p>
      <Button
        data-test="test1"
        onClick={[Function]}
        text="EDIT"
      />
    </div>
    <div
      className="row"
    >
      <Button
        data-test="test3"
        onClick={[Function]}
        text="DELETE"
      />
    </div>
  </div>
</div>
`;

exports[`<Edit/> matches the snapshot 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="row"
    >
      <p>
        nice typeface
      </p>
      <Button
        data-test="test1"
        onClick={[Function]}
        text="EDIT"
      />
    </div>
    <div
      className="row"
    >
      <Button
        data-test="test3"
        onClick={[Function]}
        text="DELETE"
      />
    </div>
  </div>
</div>
`;

exports[`<Edit/> shows controlled input value correctly 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="row"
    >
      <Input
        name="notes"
        onChange={[Function]}
        placeholder="Add some notes"
        purpose="editForm"
        type="text"
        value="weird lettering"
      />
      <Button
        data-test="test2"
        onClick={[Function]}
        text="SAVE"
      />
    </div>
    <div
      className="row"
    >
      <Button
        data-test="test3"
        onClick={[Function]}
        text="DELETE"
      />
    </div>
  </div>
</div>
`;
